test/compile_errors/err_implicit_main_conflict.w
//! expect-build-fail: file has both `fn main` and top-level executable statements

fn main:
    print("explicit")

print("top-level")
